@@ -1,4 +1,5 @@
 3.1
+ - Supports read-only transactions.
  - Fixed breakage with Solaris "make."
 3.0
  - Website is now at http://pqxx.org/ (no redirects)
